[package]
name = "gdocbak"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
google-drive3 = "*"
serde = "^1.0"
serde_json = "^1.0"
hyper-rustls = "^0.23"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "^ 1.0", features = ["full"] }
clap = { version = "3.0.14", features = ["derive"] }
